Limpiando el repositorio, añadiendo servidor y generando la nube desde el servidor

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,17 @@
 
 <head>
     <title>Word Cloud</title>
-    <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
     <script src="./d3/d3.js" charset="utf-8"></script>
     <script src="./d3/d3.layout.cloud.js"></script>
     <script src="./d3/d3.wordcloud.js"></script>
+
 </head>
 
 <body style="text-align: center">
     <h1>Word Cloud</h1>
     <div id='wordcloud'></div>
-    <script src="./js/index2.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
